# Telegram_bot_Em_Guide_voice

./: .gitignore  Dockerfile  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.py  supabase_listener.py  supabase_realtime.js  test.py  tg_bot_voice.py
handlers/: menu_handlers.py  other_handler.py  registration_handler.py  reminder_handler.py  voice_handler.py
middlewares/: throttling.py
services/: openai_service.py  save_survey_response.py  scheduler_service.py  statistics.py  yandex_service.py
services/database/: __init__.py  crud.py  models.py
states/: states.py
utils/: config.py  datetime_utils.py
