[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
aiogram = "3.7.0"
openai = "1.35.12"
sqlalchemy = "2.0.31"
pytz = "2024.1"
supabase = "2.5.1"
pygame = "2.6.0"
apscheduler = "3.10.4"
requests = "2.32.3"
pydub = "0.25.1"
pandas = "2.2.2"
python-dotenv = "1.0.1"
websocket-client = "1.8.0"
fastapi = "0.111.0"
uvicorn = "0.30.1"
asyncpg = "0.29.0"
xlsxwriter = "3.2.0"
cachetools = "5.3.3"
openpyxl = "3.1.5"
aiofiles = "23.2.1"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
async-timeout = "4.0.3"
attrs = "23.2.0"
babel = "2.15.0"
black = "24.4.2"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
deprecation = "2.1.0"
distro = "1.9.0"
dnspython = "2.6.1"
email-validator = "2.2.0"
et-xmlfile = "1.1.0"
exceptiongroup = "1.2.1"
fastapi-cli = "0.0.4"
frozenlist = "1.4.1"
gevent = "24.2.1"
gotrue = "2.5.4"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
jinja2 = "3.1.4"
magic-filter = "1.0.12"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
numpy = "2.0.0"
orjson = "3.10.6"
packaging = "24.1"
pathspec = "0.12.1"
platformdirs = "4.2.2"
postgrest = "0.16.8"
pydantic = "2.7.4"
pydantic-core = "2.18.4"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
realtime = "1.0.6"
rich = "13.7.1"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
starlette = "0.37.2"
storage3 = "0.7.6"
strenum = "0.4.15"
supafunc = "0.4.6"
tomli = "2.0.1"
tqdm = "4.66.4"
typer = "0.12.3"
typing-extensions = "4.12.2"
tzdata = "2024.1"
tzlocal = "5.2"
ujson = "5.10.0"
urllib3 = "2.2.2"
uvloop = "0.19.0"
watchfiles = "0.22.0"
websocket = "0.2.1"
websockets = "12.0"
yarl = "1.9.4"
zope-event = "5.0"
zope-interface = "6.4.post2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
